--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -99,6 +99,13 @@ h1 {
   gap: 10px;
 }
 
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 200px;
+}
+
 
 .finish-order-btn {
   background-color: #38a169;
